--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,9 @@ h1 ,h4 {
 
 
 footer {
-    position: fixed;
-    bottom: 0;
+    position: sticky;
+    top: 10px;
+    bottom: 10px;
     left: 0;
     width: 100%;
     background-color: #ffffff;
